Upgrade to Minecraft 1.18